# midi-tool

./: CMakeLists.txt  MIDIFile.cpp  MIDIFile.h  README.md  Utils.cpp  Utils.h  main.cpp
Chunks/: BodyChunk.cpp  BodyChunk.h  Chunk.cpp  Chunk.h  HeaderChunk.cpp  HeaderChunk.h
Divisions/: Division.cpp  Division.h  MetricTimeDivision.cpp  MetricTimeDivision.h  TimeCodeDivision.cpp  TimeCodeDivision.h
